[package]
name = "message-recycler"
version = "0.1.0"
authors = ["mlcruz1 <mlcruz@inf.ufrgs.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.117", features = ["derive"] }
chrono = "0.4"
redis = {version = "0.19.0" }
serde_json = "1.0.55"
crossbeam-channel = "0.5.0"